--- a/styles.css
+++ b/styles.css
@@ -99,10 +99,12 @@ body {
     padding: 20px;
 }
 
+/* Headings */
 h1 {
     font-size: 2em;
     font-weight: bold;
 }
+
 .research {
     max-width: 1000px;
     margin: auto;
@@ -117,11 +119,15 @@ h1 {
 }
 
 .research-item {
+    position: relative;
     background: #f5e1da;
     padding: 15px;
     border-radius: 5px;
     margin: 15px 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .research-item h3 {
@@ -140,7 +146,40 @@ h1 {
     height: auto;
     margin-top: 10px;
     border-radius: 5px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+
+.research-item img:hover {
+    transform: scale(1.1);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+.modal {
+    display: none; /* Hide modal by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8); /* Dark overlay */
+    justify-content: center;
+    align-items: center;
+}
+
+.modal img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 10px;
+}
+
+.modal .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
 }
 .publications-section {
     max-width: 900px;
